# milo-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  STEWARD_AUDIT.md  STEWARD_QUESTIONS.md  public-claims.json  pyproject.toml
.github/workflows/: README.md  benchmarks.yml  changelog.yml  ci.yml  downstream-chirp.yml  pages.yml  python-publish.yml  tests.yml  ty.yml
benchmarks/: AGENTS.md  BASELINE.md  README.md  conftest.py  test_bench_commands.py  test_bench_contention.py  test_bench_gateway.py  test_bench_mcp.py  test_bench_mcp_http.py  test_bench_reducer.py  test_bench_render.py  test_bench_saga.py  test_bench_schema.py  test_bench_store.py
benchmarks/comparison/: README.md  milo_app.py  typer_fastmcp_app.py
changelog.d/: +agent-affordances.added.md  +agent-vibe-coding.added.md  +agents-steward-system.changed.md  +bump-kida-0.4.0.changed.md  +call-raw-raise-on-error.fixed.md  +command-dispatch-refactor.changed.md  +dispatch-perf.changed.md  +extended-theme-colors.added.md  +group-help-fix.fixed.md  +harden-orchestration.added.md  +kida-0.5.0.changed.md  +kida-0.7-adoption.added.md  +kida-012.changed.md  +lazy-cmd-defaults.fixed.md  +lazy-cmd-hardening.fixed.md  +patch-0.2.1.changed.md  +pipeline-observability.added.md  +pipeline-progress-macro.added.md  +pipeline-tui.added.md  +py314-patterns.changed.md  +release-0.2.1.changed.md  +release-0.2.2.changed.md  +saga-effects-expansion.added.md  +saga-hardening.added.md  +sharp-edges-v2.fixed.md  +sharp-edges-v3.fixed.md  +sharp-edges.fixed.md  +silent-exception-lint.added.md  +strict-undefined.changed.md  +towncrier.added.md  100.added.md  101.added.md  102.added.md  103.added.md  105.changed.md  106.added.md  109.added.md  110.added.md  124.fixed.md  70.changed.md  (+30 more)
docs/: AGENTS.md  agent-quickstart.md  chirp-adoption-contract.md  chirp-downstream-canary.md  launch-demo-script.md  launch-post.md  mcp-2026-07-28-conformance.md  testing.md
examples/: AGENTS.md  README.md
examples/buildpipe/: app.py
examples/buildpipe/templates/: exit.kida  pipeline.kida
examples/configapp/: app.py  configapp.toml  production.toml
examples/counter/: app.py
examples/counter/templates/: counter.kida  counter.txt  exit.kida  exit.txt
examples/ctxdemo/: app.py
examples/deploy/: README.md  app.py
examples/deploy/templates/: confirm.kida
examples/devtool/: app.py
examples/downloader/: app.py
examples/downloader/templates/: downloader.kida  downloader.txt  exit.kida  exit.txt
examples/fetcher/: app.py
examples/fetcher/templates/: exit.kida  exit.txt  fetcher.kida  fetcher.txt
examples/filepicker/: app.py
examples/filepicker/templates/: exit.kida  exit.txt  filepicker.kida  filepicker.txt
examples/greet/: README.md  app.py
examples/greet/tests/: test_greet.py
examples/groups/: app.py
examples/lazyapp/: app.py  deploy_handlers.py
examples/liverender/: app.py
examples/mcp_app/: README.md  app.py
examples/outputgallery/: ADOPTION.md  README.md  app.py
examples/outputgallery/templates/: _primitives.kida  atlas.kida  audit.kida  audit_ascii.kida  audit_summary.kida  browser.kida  cache.kida  catalog.kida  directive.kida  focus.kida  grammar.kida  graph.kida  heat.kida  layout.kida  live.kida  primitives.kida  spark.kida  timeline.kida  warnings.kida
examples/pluggable/: app.py
examples/spinner/: app.py
examples/spinner/templates/: exit.kida  spinner.kida
examples/stopwatch/: app.py
examples/stopwatch/templates/: exit.kida  exit.txt  stopwatch.kida  stopwatch.txt
examples/taskman/: README.md  app.py
examples/todo/: app.py
examples/todo/templates/: exit.kida  exit.txt  todo.kida  todo.txt
examples/wizard/: app.py
examples/wizard/templates/: config.kida  config.txt  done.kida  done.txt  exit.kida  exit.txt  welcome.kida  welcome.txt
plan/: README.md
scripts/: check_chirp_canary.py  check_docs_snippets.py  check_templates.py  lint_silent_exceptions.py  release_status.py
showcase/: README.md
showcase/waypoint/: HOOKS.md  README.md  app.py  replay.py
showcase/waypoint/templates/: timeline.kida
site/: AGENTS.md
site/config/_default/: autodoc.yaml  build.yaml  content.yaml  external_refs.yaml  features.yaml  fonts.yaml  menu.yaml  outputs.yaml  site.yaml  (+4 more)
site/content/: _index.md
site/data/: authors.yaml
src/milo/: AGENTS.md  __init__.py  _cells.py  _child.py  _cli_help.py  _command_defs.py  _compat.py  _errors.py  _jsonrpc.py  _mcp_router.py  _protocols.py  _types.py  app.py  cli.py  commands.py  completions.py  components_cli.py  config.py  context.py  dev.py  doctor.py  flow.py  form.py  gateway.py  groups.py  help.py  live.py  llms.py  mcp.py  mcp_apps.py  mcp_http.py  middleware.py  observability.py  output.py  pipeline.py  plugins.py  reducers.py  registry.py  schema.py  state.py  (+4 more)
src/milo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: AGENTS.md  README.md  _lazy_handlers.py  conftest.py  test_ai_native.py  test_app.py  test_bubbletea_patterns.py  test_child.py  test_chirp_adoption_contract.py  test_chirp_downstream_canary.py  test_cli.py  test_command_contract.py  test_command_defs.py  test_commands_core.py  test_commands_middleware.py  test_compat.py  test_completions.py  test_components.py  test_config.py  test_context.py  test_ctxdemo_example.py  test_dev.py  test_docs_information_architecture.py  test_docs_snippets.py  test_doctor.py  test_downloader_example.py  test_effects.py  test_effects_stress.py  test_errors.py  test_flow.py  test_form.py  test_gateway.py  test_gateway_mcp_apps.py  test_groups.py  test_help.py  test_input.py  test_lazy.py  test_mcp_app_example.py  test_mcp_apps.py  test_mcp_compat_docs.py  (+36 more)
tests/docs/: README.md  test_hygiene_governance.py  test_information_architecture.py  test_mcp_compat.py  test_migration.py  test_public_claims.py  test_readme_example_index.py  test_snippets.py
tests/integration/: README.md  test_chirp_downstream_canary.py
tests/unit/: README.md  test_mcp_2026_conformance.py  test_mcp_http.py  test_reducer_properties.py  test_schema_properties.py
(+147 files in other folders)
